# bau

./: Cargo.toml  LICENSE  README.md
lang/: Cargo.toml
lang/bau/: Cargo.toml
lang/bau/src/: error.rs  lib.rs  main.rs  source.rs  typechecker.rs
lang/bau/src/interpreter/: builtin.rs  error.rs  mod.rs  value.rs
lang/bau/src/parser/: error.rs  mod.rs
lang/bau/src/tokenizer/: mod.rs  rule.rs  token.rs
lang/bau/src/typechecker/: error.rs  mod.rs
lang/bau/tests/: mod.rs
lang/core/: Cargo.toml
lang/core/src/: builtins.rs  error.rs  lib.rs  main.rs  prelude.bau  typechecker.rs  types.rs
lang/core/src/interpreter/: execution.rs  mod.rs  scope.rs  value.rs
lang/core/src/parser/: ast.rs  expr.rs  item.rs  mod.rs  source.rs  stmt.rs
lang/core/src/tokenizer/: mod.rs  rules.rs  token.rs
lang/core/tests/: fn_main.rs  fn_order.rs  fn_return_type.rs  item_extension.rs  mod.rs  stmt_assignment.rs  stmt_let.rs
lang/language-server/: Cargo.toml
lang/language-server/src/: main.rs  semantic_tokens.rs
src/: builtins.rs  error.rs  main.rs  node.rs  typechecker.rs
src/interpreter/: evaluation.rs  execution.rs  mod.rs  scope.rs  value.rs
src/parser/: ast.rs  expr.rs  hierarchy.rs  item.rs  mod.rs  source.rs  stmt.rs  tokenizer.rs
src/tokenizer/: mod.rs  rules.rs  source.rs  token.rs
tools/editor/bau-vscode/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  vsc-extension-quickstart.md
tools/editor/bau-vscode/src/: extension.ts
tools/editor/bau-vscode/syntaxes/: bau.tmLanguage.json
